# sysinfo-cli

./: Cargo.toml  LICENSE  README.md
src/: args.rs  collector.rs  fmt.rs  main.rs  models.rs  tests.rs
